--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -20,5 +20,7 @@
   "drawer.messages": "Messages",
   "drawer.account": "Account",
   "drawer.logout": "Log Out",
-  "drawer.login": "Log In"
+  "drawer.login": "Log In",
+  "api.error.500": "Something went wrong. Retry later.",
+  "api.LOGIN.error.404": "Email or password incorrect"
 }
