--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -21,6 +21,8 @@
   "drawer.account": "Account",
   "drawer.logout": "Log Out",
   "drawer.login": "Log In",
+  "drawer.dialog.logout.title": "Confirm Log Out",
+  "drawer.dialog.logout.text": "Are you sure to log out?",
   "landing.title": "CRM",
   "landing.login": "Log In to use it",
   "login.title": "Log In",
@@ -32,6 +34,8 @@
   "login.error.email.required": "Email is required",
   "login.error.email.invalid": "Email is invalid",
   "login.error.password.required": "Password is required",
+  "dialog.confirm": "Confirm",
+  "dialog.cancel": "Cancel",
   "api.error.500": "Something went wrong. Retry later.",
   "api.LOGIN.error.401": "Email or password incorrect"
 }
