--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1,11 +1,18 @@
 {
   "navbar.title": "CRM",
   "navbar.customers": "Customers",
+  "navbar.customers.customers": "Customers",
+  "navbar.customers.customersMap": "Customers Map",
   "navbar.calendar": "Calendar",
   "navbar.dashboard": "Dashboard",
   "navbar.meetingnote": "Meeting Note",
-  "navbar.adminpanel": "Admin Panel",
+  "navbar.adminPanel": "Admin Panel",
+  "navbar.adminPanel.adminPanel": "Admin Panel",
+  "navbar.adminPanel.users": "Users",
+  "navbar.adminPanel.targets": "Targets",
+  "navbar.adminPanel.sendMessage": "Send Message",
   "navbar.login": "Log In",
+  "navbar.logout": "Log Out",
   "drawer.title": "KOptical CRM",
   "drawer.customers": "Customers",
   "drawer.customersMap": "Customers Map",
@@ -16,7 +23,7 @@
   "drawer.adminPanel": "Admin Panel",
   "drawer.users": "Users",
   "drawer.targets": "Targets",
-  "drawer.sendmessage": "Send Message",
+  "drawer.sendMessage": "Send Message",
   "drawer.messages": "Messages",
   "drawer.account": "Account",
   "drawer.logout": "Log Out",
