Forgot pasword page

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -38,11 +38,20 @@
   "login.rememberMe": "Remember Me",
   "login.login": "Log In",
   "login.forgotPassword": "Forgot Password ?",
-  "login.error.email.required": "Email is required",
-  "login.error.email.invalid": "Email is invalid",
-  "login.error.password.required": "Password is required",
+  "forgotPassword.title": "Forgot Password",
+  "forgotPassword.email": "Email",
+  "forgotPassword.checkEmail": "Check email",
+  "forgotPassword.sendOtp": "Send OTP to",
+  "forgotPassword.sendEmail": "Send",
+  "forgotPassword.otpSent": "OTP successfully sent",
   "dialog.confirm": "Confirm",
   "dialog.cancel": "Cancel",
+  "error.email.required": "Email is required",
+  "error.email.invalid": "Email is invalid",
+  "error.password.required": "Password is required",
   "api.error.500": "Something went wrong. Retry later.",
-  "api.LOGIN.error.401": "Email or password incorrect"
+  "api.LOGIN.error.401": "Email or password incorrect",
+  "api.FORGOT_PASSWORD.error.401": "Email incorrect",
+  "api.SEND_OTP.error.401": "Email incorrect",
+  "api.SEND_OTP.error.502": "Could not send new OTP"
 }
