Settings page and change password

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -13,6 +13,7 @@
   "navbar.adminPanel.sendMessage": "Send Message",
   "navbar.login": "Log In",
   "navbar.logout": "Log Out",
+  "navbar.settings": "Settings",
   "drawer.title": "KOptical CRM",
   "drawer.customers": "Customers",
   "drawer.customersMap": "Customers Map",
@@ -44,14 +45,27 @@
   "forgotPassword.sendOtp": "Send OTP to",
   "forgotPassword.sendEmail": "Send",
   "forgotPassword.otpSent": "OTP successfully sent",
+  "settings.title": "Settings",
+  "settings.changePassword.title": "Change Password",
+  "settings.changePassword.text": "Last change",
+  "settings.changePassword.currentPassword": "Current Password",
+  "settings.changePassword.newPassword": "New Password",
+  "settings.changePassword.confirmPassword": "Confirm Password",
+  "settings.changePassword.savePassword": "Save Password",
+  "settings.changePassword.success": "Password successfully changed",
   "dialog.confirm": "Confirm",
   "dialog.cancel": "Cancel",
   "error.email.required": "Email is required",
   "error.email.invalid": "Email is invalid",
   "error.password.required": "Password is required",
+  "error.currentPassword.required": "Current password is required",
+  "error.newPassword.required": "New password is required",
+  "error.confirmPassword.required": "Confirm password is required",
+  "error.confirmPassword.invalid": "Confirm password doesn't match new password",
   "api.error.500": "Something went wrong. Retry later.",
   "api.LOGIN.error.401": "Email or password incorrect",
   "api.FORGOT_PASSWORD.error.401": "Email incorrect",
   "api.SEND_OTP.error.401": "Email incorrect",
-  "api.SEND_OTP.error.502": "Could not send new OTP"
+  "api.SEND_OTP.error.502": "Could not send new OTP",
+  "api.CHANGE_PASSWORD.error.401": "Invalid current password"
 }
